--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -5,9 +5,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
-swamp-script-eval = { path = "../eval", version = "0.0.1" }
-swamp-script-parser = { path = "../parser", version = "0.0.1" }
-
 pest = "2.7.14" # TODO: remove pest
 tracing = "0.1.40"
 
@@ -17,6 +14,21 @@ tracing-subscriber = { version = "0.3.18", features = [
     "registry",
     "env-filter",
 ] }
+
+
+
+
+# Ast and Parser
+swamp-script-parser = { path = "../parser", version = "0.0.1" }
+swamp-script-ast = { path = "../ast", version = "0.0.1" }
+
+# Semantic and Analyzer
+swamp-script-semantic = { path = "../semantic", version = "0.0.1" }
+swamp-script-analyzer = { path = "../analyzer", version = "0.0.1" }
+
+# Runner
+swamp-script-eval = { path = "../eval", version = "0.0.1" }
+
 
 
 [[bin]]
