--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-swamp-script-ast = { path = "../ast", version = "0.0.1" }
-swamp-script-parser = { path = "../parser", version = "0.0.1" }
-swamp-script-derive = { path = "../derive", version = "0.0.1" }
-seq-map = "0.0.8"
 tracing = "0.1.40"
+swamp-script-semantic = { path = "../semantic", version = "0.0.1" }
+fixed32 = "0.0.17"
+seq-fmt = "0.0.1"
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
+swamp-script-analyzer = { path = "../analyzer", version = "0.0.1" }
+swamp-script-ast = { path = "../ast", version = "0.0.1" }
+swamp-script-parser = { path = "../parser", version = "0.0.1" }
