--- a/crates/analyzer/Cargo.toml
+++ b/crates/analyzer/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "swamp-script-parser"
+name = "swamp-script-analyzer"
 version = "0.0.1"
 edition = "2021"
 
 [dependencies]
 pest = "2.7.14"
-pest_derive = "2.7.14"
-seq-map = "0.0.11"
-
-swamp-script-ast = { path = "../ast", version = "0.0.1" }
 tracing = "0.1.40"
-fixed32 = "0.0.17"
+seq-map = "0.0.11"
+swamp-script-semantic = { path = "../semantic", version = "0.0.1" }
+swamp-script-ast = { path = "../ast", version = "0.0.1" }
+
+swamp-script-parser = { path = "../parser", version = "0.0.1" }
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
