--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -29,7 +29,7 @@ swamp-script-analyzer = { path = "../analyzer", version = "0.0.1" }
 # Runner
 swamp-script-eval = { path = "../eval", version = "0.0.1" }
 
-
+swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.1" }
 
 [[bin]]
 name = "swamp"
