--- a/crates/dep-loader/Cargo.toml
+++ b/crates/dep-loader/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "swamp-script-dep-loader"
-version = "0.0.1"
+version = "0.0.2-a03"
 edition = "2021"
 
 [dependencies]
 pest = "2.7.14"
 tracing = "0.1.40"
 seq-map = "0.0.11"
-swamp-script-semantic = { path = "../semantic", version = "0.0.1" }
-swamp-script-ast = { path = "../ast", version = "0.0.1" }
-swamp-script-parser = { path = "../parser", version = "0.0.1" }
-swamp-script-analyzer = { path = "../analyzer", version = "0.0.1" }
+swamp-script-semantic = { path = "../semantic", version = "0.0.2-a03" }
+swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
+swamp-script-parser = { path = "../parser", version = "0.0.2-a03" }
+swamp-script-analyzer = { path = "../analyzer", version = "0.0.2-a03" }
