--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "swamp-script-eval"
-version = "0.0.1"
+version = "0.0.2-a03"
 edition = "2021"
 
 [dependencies]
 tracing = "0.1.40"
-swamp-script-semantic = { path = "../semantic", version = "0.0.1" }
+swamp-script-semantic = { path = "../semantic", version = "0.0.2-a03" }
 fixed32 = "0.0.17"
 seq-fmt = "0.0.1"
 
@@ -13,7 +13,7 @@ seq-fmt = "0.0.1"
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
 pest = "2.7.14" # TODO: remove pest
 
-swamp-script-ast = { path = "../ast", version = "0.0.1" }
-swamp-script-parser = { path = "../parser", version = "0.0.1" }
-swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.1" }
-swamp-script-analyzer = { path = "../analyzer", version = "0.0.1" }
+swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
+swamp-script-parser = { path = "../parser", version = "0.0.2-a03" }
+swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.2-a03" }
+swamp-script-analyzer = { path = "../analyzer", version = "0.0.2-a03" }
