--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swamp-script-parser"
-version = "0.0.1"
+version = "0.0.2-a03"
 edition = "2021"
 
 [dependencies]
@@ -10,7 +10,7 @@ seq-map = "0.0.11"
 tracing = "0.1.40"
 fixed32 = "0.0.17"
 
-swamp-script-ast = { path = "../ast", version = "0.0.1" }
+swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
