--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "swamp-script-semantic"
-version = "0.0.1"
+version = "0.0.2-a03"
 edition = "2021"
 
 [dependencies]
-swamp-script-ast = { path = "../ast", version = "0.0.1" }
+swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
 seq-map = "0.0.11"
 tracing = "0.1.40"
 fixed32 = "0.0.17"
