--- a/crates/ast/Cargo.toml
+++ b/crates/ast/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-ast"
 version = "0.0.2-a03"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "ast types for swamp script"
 
 [dependencies]
 seq-map = "0.0.11"
