--- a/crates/dep-loader/Cargo.toml
+++ b/crates/dep-loader/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-dep-loader"
 version = "0.0.2-a03"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "dependency parser and loader for swamp script"
 
 [dependencies]
 pest = "2.7.14"
