--- a/crates/derive/Cargo.toml
+++ b/crates/derive/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-derive"
 version = "0.0.2-a03"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "derive macros for swamp script"
 
 [dependencies]
 quote = "1.0.37"
