--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-eval"
 version = "0.0.2-a03"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "interpreter for swamp script"
 
 [dependencies]
 tracing = "0.1.40"
