--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -2,6 +2,10 @@
 name = "swamp-script-parser"
 version = "0.0.2-a03"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "parser for swamp script"
+
 
 [dependencies]
 pest = "2.7.14"
