--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-semantic"
 version = "0.0.2-a03"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "semantic types for swamp script"
 
 [dependencies]
 swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
