--- a/crates/analyzer/Cargo.toml
+++ b/crates/analyzer/Cargo.toml
@@ -20,3 +20,4 @@ pest = "2.7.14" # TODO: remove pest
 
 swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.2-a03" }
 swamp-script-parser = { path = "../parser", version = "0.0.2-a03" }
+swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.2-a03" }
