--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -31,6 +31,7 @@ swamp-script-analyzer = { path = "../analyzer", version = "0.0.2-a03" }
 
 # Runner
 swamp-script-eval = { path = "../eval", version = "0.0.2-a03" }
+swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.2-a03"}
 
 swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.2-a03" }
 
