--- a/crates/swamp-script/Cargo.toml
+++ b/crates/swamp-script/Cargo.toml
@@ -20,3 +20,5 @@ swamp-script-analyzer = { path = "../analyzer", version = "0.0.2-a03" }
 swamp-script-eval = { path = "../eval", version = "0.0.2-a03" }
 
 swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.2-a03" }
+
+swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.2-a03" }
