--- a/crates/ast/Cargo.toml
+++ b/crates/ast/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swamp-script-ast"
-version = "0.0.2-a03"
+version = "0.0.4"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/swamp/script"
