--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swamp-script-eval"
-version = "0.0.2-a03"
+version = "0.0.4"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/swamp/script"
@@ -8,7 +8,7 @@ description = "interpreter for swamp script"
 
 [dependencies]
 tracing = "0.1.40"
-swamp-script-semantic = { path = "../semantic", version = "0.0.2-a03" }
+swamp-script-semantic = { path = "../semantic", version = "0.0.4" }
 fixed32 = "0.0.17"
 seq-fmt = "0.0.1"
 
@@ -16,8 +16,8 @@ seq-fmt = "0.0.1"
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
 pest = "2.7.14" # TODO: remove pest
 
-swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
-swamp-script-parser = { path = "../parser", version = "0.0.2-a03" }
-swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.2-a03" }
-swamp-script-analyzer = { path = "../analyzer", version = "0.0.2-a03" }
-swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.2-a03" }
+swamp-script-ast = { path = "../ast", version = "0.0.4" }
+swamp-script-parser = { path = "../parser", version = "0.0.4" }
+swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.4" }
+swamp-script-analyzer = { path = "../analyzer", version = "0.0.4" }
+swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.4" }
