--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swamp-script-parser"
-version = "0.0.2-a03"
+version = "0.0.4"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/swamp/script"
@@ -14,7 +14,7 @@ seq-map = "0.0.11"
 tracing = "0.1.40"
 fixed32 = "0.0.17"
 
-swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
+swamp-script-ast = { path = "../ast", version = "0.0.4" }
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
