--- a/crates/semantic/Cargo.toml
+++ b/crates/semantic/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "swamp-script-semantic"
-version = "0.0.2-a03"
+version = "0.0.4"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/swamp/script"
 description = "semantic types for swamp script"
 
 [dependencies]
-swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
+swamp-script-ast = { path = "../ast", version = "0.0.4" }
 seq-map = "0.0.11"
 tracing = "0.1.40"
 fixed32 = "0.0.17"
