--- a/crates/swamp-script/Cargo.toml
+++ b/crates/swamp-script/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swamp-script"
-version = "0.0.2-a03"
+version = "0.0.4"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/swamp/script"
@@ -9,16 +9,16 @@ description = "script language for embedding"
 [dependencies]
 
 # Ast and Parser
-swamp-script-parser = { path = "../parser", version = "0.0.2-a03" }
-swamp-script-ast = { path = "../ast", version = "0.0.2-a03" }
+swamp-script-parser = { path = "../parser", version = "0.0.4" }
+swamp-script-ast = { path = "../ast", version = "0.0.4" }
 
 # Semantic and Analyzer
-swamp-script-semantic = { path = "../semantic", version = "0.0.2-a03" }
-swamp-script-analyzer = { path = "../analyzer", version = "0.0.2-a03" }
+swamp-script-semantic = { path = "../semantic", version = "0.0.4" }
+swamp-script-analyzer = { path = "../analyzer", version = "0.0.4" }
 
 # Runner
-swamp-script-eval = { path = "../eval", version = "0.0.2-a03" }
+swamp-script-eval = { path = "../eval", version = "0.0.4" }
 
-swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.2-a03" }
+swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.4" }
 
-swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.2-a03" }
+swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.4" }
