--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -11,6 +11,7 @@ tracing = "0.1.40"
 swamp-script-semantic = { path = "../semantic", version = "0.0.4" }
 fixed32 = "0.0.17"
 seq-fmt = "0.0.1"
+seq-map = "0.0.11"
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
