--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -12,6 +12,9 @@ swamp-script-semantic = { path = "../semantic", version = "0.0.5" }
 fixed32 = "0.0.17"
 seq-fmt = "0.0.1"
 seq-map = "0.0.11"
+sparse-slot = "0.0.1"
+
+
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
