--- a/crates/derive/Cargo.toml
+++ b/crates/derive/Cargo.toml
@@ -9,6 +9,7 @@ description = "derive macros for swamp script"
 [dependencies]
 quote = "1.0.37"
 syn = { version = "2.0.87", features = ["full", "extra-traits"] }
+proc-macro2 = "1.0.89"
 
 
 [lib]
