--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -10,11 +10,9 @@ description = "interpreter for swamp script"
 tracing = "0.1.40"
 swamp-script-semantic = { path = "../semantic", version = "0.0.6" }
 fixed32 = "0.0.17"
-seq-fmt = "0.0.1"
-seq-map = "0.0.12"
-sparse-slot = "0.0.3"
+seq-map = "0.0.13"
 
-
+swamp-script-core = { path = "../core", version = "0.0.6" }
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
