--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -32,6 +32,7 @@ swamp-script-analyzer = { path = "../analyzer", version = "0.0.6" }
 # Runner
 swamp-script-eval = { path = "../eval", version = "0.0.6" }
 swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.6" }
+swamp-script-core = { path = "../core", version = "0.0.6" }
 
 swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.6" }
 
