--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -2,6 +2,10 @@
 name = "swamp-script-core"
 version = "0.0.7"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "core parts for swamp evaluator"
+
 
 [dependencies]
 swamp-script-semantic = { path = "../semantic", version = "0.0.7" }
