--- a/crates/std/Cargo.toml
+++ b/crates/std/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-std"
 version = "0.0.7"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "standard library for swamp"
 
 [dependencies]
 swamp-script-semantic = { path = "../semantic", version = "0.0.7" }
