fix: start work on span cleanup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,7 @@ members = [
     # Core and Std
     "crates/core",
     "crates/std",
+
+
+    "crates/source-map", "crates/extra", "crates/err", "crates/eira",
 ]
