--- a/crates/analyzer/Cargo.toml
+++ b/crates/analyzer/Cargo.toml
@@ -12,3 +12,9 @@ seq-map = "0.0.13"
 
 swamp-script-semantic = { path = "../semantic", version = "0.0.7" }
 swamp-script-ast = { path = "../ast", version = "0.0.7" }
+swamp-script-source-map = { path = "../source-map", version = "0.0.7" }
+
+
+[dev-dependencies]
+swamp-script-parser = {path = "../parser", version = "0.0.7"}
+test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
