--- a/crates/eval-loader/Cargo.toml
+++ b/crates/eval-loader/Cargo.toml
@@ -11,6 +11,7 @@ swamp-script-ast = { path = "../ast", version = "0.0.7" }
 swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.7" }
 swamp-script-analyzer = { path = "../analyzer", version = "0.0.7" }
 swamp-script-semantic = { path = "../semantic", version = "0.0.7" }
+swamp-script-source-map = { path = "../source-map", version = "0.0.7" }
 
 [dev-dependencies]
 test-log = { version = "0.2.16", features = ["trace", "log", "color"] }
