--- a/scripts/changelog.yaml
+++ b/scripts/changelog.yaml
@@ -20,6 +20,35 @@ repo: swamp/script
 # security
 
 releases:
+  v0.0.8:
+    date: "2024-12-30"
+    notice: 
+    sections:
+      General:
+        changes:
+          fixed:
+            - Wrapping Option values for assignments when needed
+            - Do not wrap `none` with option
+            - Enum variant structs, `ResolvedEnumLiteralData::Struct`, handle fields in source code order
+
+          added:
+            - Keyword `use` reads and parses the specified files.
+            - Add `MutStructFieldRef` for location of mutable struct field reference
+
+          improved:
+            - More errors have `Span` information
+
+          refactor:
+            - Use `Rc<RefCell<T>>` for `Value` containers, to easier give out locations (MutRef).
+            - Pest errors should not leak through the codebase.
+            - Reference separate from Value to have a clear distinction between mutable references and normal values (and to avoid infinite accidental recursion).
+        
+          test:
+            - Add more test to have better coverage for parser and analyzer
+
+          removed:
+            - Type aliases
+
   v0.0.5:
     date: "2024-12-06"
     notice: |
