feat: implement rest_fields for struct instantiation
fix: dependency loader ignores already resolved modules

--- a/crates/err/Cargo.toml
+++ b/crates/err/Cargo.toml
@@ -9,5 +9,7 @@ repository = "https://github.com/swamp/script"
 [dependencies]
 swamp-script-semantic = { path = "../semantic", version = "0.0.9" }
 swamp-script-source-map = { path = "../source-map", version = "0.0.9" }
+
 swamp-script-analyzer = { path = "../analyzer", version = "0.0.9" }
+swamp-script-parser = { path = "../parser", version = "0.0.9" }
 eira = { path = "../eira", version = "0.0.9" }
