--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -14,6 +14,7 @@ seq-map = "0.0.13"
 
 swamp-script-core = { path = "../core", version = "0.0.9" }
 swamp-script-source-map = { path = "../source-map", version = "0.0.9" }
+squirrel-prng = "0.0.1"
 
 
 [dev-dependencies]
