fix: add more error reports

--- a/crates/analyzer/Cargo.toml
+++ b/crates/analyzer/Cargo.toml
@@ -9,6 +9,7 @@ description = "analyzer for swamp script"
 [dependencies]
 tracing = "0.1.40"
 seq-map = "0.0.13"
+seq-set = "0.0.2"
 
 swamp-script-semantic = { path = "../semantic", version = "0.0.9" }
 swamp-script-ast = { path = "../ast", version = "0.0.9" }
