Revert "feat: start work on `type` alias and `mod`"
This reverts commit 94751ff5fa1a10ae5c228ec49ef155e1353f0e84.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,5 +30,5 @@ members = [
 
     "crates/source-map", # Move this later
     "crates/eira",
-    "crates/source-map-lookup", "crates/doc", # Move this later
+    "crates/source-map-lookup", # Move this later
 ]
