--- a/crates/err/Cargo.toml
+++ b/crates/err/Cargo.toml
@@ -9,6 +9,8 @@ repository = "https://github.com/swamp/script"
 [dependencies]
 swamp-script-semantic = { path = "../semantic", version = "0.0.12" }
 swamp-script-source-map = { path = "../source-map", version = "0.0.12" }
+swamp-script-dep-loader = { path = "../dep-loader", version = "0.0.12"}
+swamp-script-eval-loader = { path = "../eval-loader", version = "0.0.12"}
 
 swamp-script-eval = { path = "../eval", version = "0.0.12" }
 swamp-script-analyzer = { path = "../analyzer", version = "0.0.12" }
