--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ members = [
     "crates/eval-loader",
 
     # Core and Std
-    "crates/core",
+    "crates/core-extra",
     "crates/std",
 
     # "crates/extra", # Not used yet
@@ -30,5 +30,5 @@ members = [
 
     "crates/source-map", # Move this later
     "crates/eira",
-    "crates/source-map-lookup", # Move this later
+    "crates/source-map-lookup", "crates/core", # Move this later
 ]
