--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -13,7 +13,7 @@ fixed32 = "0.0.17"
 seq-map = "0.0.13"
 seq-fmt = "0.0.1"
 
-swamp-script-core = { path = "../core", version = "0.0.12" }
+swamp-script-core-extra = { path = "../core-extra", version = "0.0.12" }
 swamp-script-source-map = { path = "../source-map", version = "0.0.12" }
 squirrel-prng = "0.0.1"
 
