--- a/crates/source-map-lookup/Cargo.toml
+++ b/crates/source-map-lookup/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 swamp-script-semantic = { path = "../semantic", version = "0.0.12" }
 swamp-script-source-map = { path = "../source-map", version = "0.0.12" }
-swamp-script-core = { path = "../core", version = "0.0.12" }
+swamp-script-core-extra = { path = "../core-extra", version = "0.0.12" }
