--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -2,6 +2,9 @@
 name = "core"
 version = "0.0.14"
 edition = "2024"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "core module for Swamp"
 
 [dependencies]
 swamp-script-semantic = { path = "../semantic", version = "0.0.14" }
