--- a/crates/source-map-lookup/Cargo.toml
+++ b/crates/source-map-lookup/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-source-map-lookup"
 version = "0.0.14"
 edition = "2024"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "Source map lookup for Swamp"
 
 [dependencies]
 swamp-script-semantic = { path = "../semantic", version = "0.0.14" }
