--- a/scripts/changelog.yaml
+++ b/scripts/changelog.yaml
@@ -20,9 +20,61 @@ repo: swamp/script
 # security
 
 releases:
+  v0.0.16:
+    date: "2025-03-04"
+    notice:
+    sections:
+      General:
+        changes:
+          fixed:
+            - '`impl` can be added to intrinsic types, named structs and enum. Previously it only worked on named structs.'
+  v0.0.15:
+    date: "2025-03-04"
+    notice:
+    sections:
+      General:
+        changes:
+          fixed:
+            - '`mut` in struct pattern now works as intended'
+
+          added:
+            - |
+              anonymous structs allowed in named struct definitions. e.g.
+              ```swamp
+              struct Something { pos: { x : Int, y : Int } }
+              ```
+
+            - |
+              anonymous structs coercion to named structs. e.g.
+
+              ```swamp
+              Position { x: 10 }
+              ```
+              can be written as
+
+              ```swamp
+              { x : 10}
+              ```
+              if the type is known.
+
+            - |
+              import all in `use` and `mod` with specifying "*". e.g.
+
+              ```swamp
+              mod some_module::*
+              ```
+
+          changed:
+            - |
+              `mod` allows for import items just as `use` does. e.g.
+
+              ```swamp
+              mod some_module::{something, Another}`
+              ```
+
   v0.0.8:
     date: "2024-12-30"
-    notice: 
+    notice:
     sections:
       General:
         changes:
@@ -42,7 +94,7 @@ releases:
             - Use `Rc<RefCell<T>>` for `Value` containers, to easier give out locations (MutRef).
             - Pest errors should not leak through the codebase.
             - Reference separate from Value to have a clear distinction between mutable references and normal values (and to avoid infinite accidental recursion).
-        
+
           test:
             - Add more test to have better coverage for parser and analyzer
 
@@ -57,7 +109,7 @@ releases:
       - Map assignment and map type.
       - Optional operator in if statements and if-expressions.
       - `none` keyword
-      
+
   v0.0.4:
     date: "2024-12-03"
     notice: |
