--- a/crates/compile/Cargo.toml
+++ b/crates/compile/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-compile"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "Compile utility functions"
 
 [dependencies]
 swamp-script-source-map = { path = "../source-map", version = "0.1.0" }
