--- a/crates/pretty-print/Cargo.toml
+++ b/crates/pretty-print/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-pretty-print"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+repository = "https://github.com/swamp/script"
+description = "pretty print of types and expressions for Swamp"
 
 [dependencies]
 tracing = "0.1.40"
