--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,5 +33,8 @@ members = [
     "crates/source-map", # Move this later
     "crates/eira",
     "crates/pretty-print",
-    "crates/source-map-lookup", "crates/core", "crates/types", "crates/node", # Move this later
+    "crates/source-map-lookup",
+    "crates/core",
+    "crates/types",
+    "crates/node", # Move this later
 ]
