--- a/crates/code-gen/Cargo.toml
+++ b/crates/code-gen/Cargo.toml
@@ -8,3 +8,5 @@ swamp-script-vm = { path = "../vm", version = "0.1.3" }
 swamp-script-semantic = { path = "../semantic", version = "0.1.3"}
 swamp-script-types = { path = "../types", version = "0.1.3"}
 seq-map = "0.0.13"
+
+tracing = "0.1.40"
