--- a/crates/vm-test/Cargo.toml
+++ b/crates/vm-test/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.3"
 edition = "2024"
 
 [dependencies]
-swamp-script-vm = { path = "../vm", version = "0.1.3"}
+swamp-script-vm = { path = "../vm", version = "0.1.3", features = ["debug_vm"]}
 swamp-script-code-gen = { path = "../code-gen", version = "0.1.3"}
 swamp-script-compile = { path = "../compile", version = "0.1.3"}
 hexify = "0.0.3"
