--- a/crates/disasm/Cargo.toml
+++ b/crates/disasm/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "swamp-vm"
+name = "swamp-vm-disasm"
 version = "0.1.3"
 edition = "2024"
 
 [dependencies]
 swamp-vm-types = { path = "../vm-types", version = "0.1.3" }
-
-[features]
-debug_vm = []  # Enable VM debug output
+yansi = "1.0.1"
