--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,13 @@ members = [
     "crates/source-map-lookup",
     "crates/core",
     "crates/types",
-    "crates/node", "crates/vm", "crates/code-gen", "crates/vm-test", "crates/disasm", "crates/vm-types", # Move this later
+    "crates/node",
+
+    "crates/code-gen",
+    # VM, move later
+    "crates/vm",
+    "crates/vm-test",
+    "crates/vm-disasm",
+    "crates/vm-types",
+    "crates/vm-instr-build",
 ]
