--- a/crates/code-gen/Cargo.toml
+++ b/crates/code-gen/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-code-gen"
 version = "0.1.3"
 edition = "2024"
+license = "MIT"
+description = "generates swamp-vm opcodes"
+repository = "https://github.com/swamp/script"
 
 [dependencies]
 # Swamp VM
