--- a/crates/vm-instr-build/Cargo.toml
+++ b/crates/vm-instr-build/Cargo.toml
@@ -2,6 +2,10 @@
 name = "swamp-vm-instr-build"
 version = "0.1.3"
 edition = "2024"
+license = "MIT"
+description = "builds opcodes for the swamp vm"
+repository = "https://github.com/swamp/script"
+
 
 [dependencies]
 swamp-vm-types = { path = "../vm-types", version = "0.1.3" }
