--- a/crates/vm-test/Cargo.toml
+++ b/crates/vm-test/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-script-vm-test"
 version = "0.1.3"
 edition = "2024"
+license = "MIT"
+description = "examples and tests on how to use the swamp vm with swamp script"
+repository = "https://github.com/swamp/script"
 
 [dependencies]
 swamp-vm = { path = "../vm", version = "0.1.3", features = [] }
