--- a/crates/vm-types/Cargo.toml
+++ b/crates/vm-types/Cargo.toml
@@ -2,5 +2,8 @@
 name = "swamp-vm-types"
 version = "0.1.3"
 edition = "2024"
+license = "MIT"
+description = "shared types for the swamp VM"
+repository = "https://github.com/swamp/script"
 
 [dependencies]
