--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -2,10 +2,13 @@
 name = "swamp-vm"
 version = "0.1.3"
 edition = "2024"
+license = "MIT"
+description = "Minimial virtual machine"
+repository = "https://github.com/swamp/script"
+
 
 [dependencies]
 swamp-vm-types = { path = "../vm-types", version = "0.1.3" }
-hexify = "0.0.3"
 
 [features]
 debug_vm = []  # Enable VM debug output
