fix: more work on host functions

--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/swamp/script"
 
 [dependencies]
 swamp-vm-types = { path = "../vm-types", version = "0.1.5" }
+seq-map = "0.0.13"
 
 [features]
 debug_vm = []  # Enable VM debug output
