--- a/crates/code-gen/Cargo.toml
+++ b/crates/code-gen/Cargo.toml
@@ -13,6 +13,7 @@ swamp-vm-instr-build = { path = "../vm-instr-build", version = "0.1.5" }
 
 # Swamp script
 swamp-script-semantic = { path = "../semantic", version = "0.1.5" }
+swamp-script-node = { path = "../node", version = "0.1.5"}
 swamp-script-types = { path = "../types", version = "0.1.5" }
 
 seq-map = "0.0.13"
