--- a/crates/vm-host/Cargo.toml
+++ b/crates/vm-host/Cargo.toml
@@ -2,6 +2,9 @@
 name = "swamp-vm-host"
 version = "0.1.6"
 edition = "2024"
+license = "MIT"
+description = "host interface for the swamp VM"
+repository = "https://github.com/swamp/script"
 
 [dependencies]
 swamp-vm = {path= "../vm", version = "0.1.6" }
