--- a/crates/pretty-print/Cargo.toml
+++ b/crates/pretty-print/Cargo.toml
@@ -15,3 +15,4 @@ swamp-script-semantic = { path = "../semantic", version = "0.1.7" }
 swamp-script-core-extra = { path = "../core-extra", version = "0.1.7" }
 swamp-script-modules = { path = "../modules", version = "0.1.7" }
 swamp-script-types = { path = "../types", version = "0.1.7" }
+swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.7"}
