--- a/crates/compile/Cargo.toml
+++ b/crates/compile/Cargo.toml
@@ -29,6 +29,9 @@ swamp-script-dep-loader = { path = "../dep-loader", version = "0.1.7" }
 swamp-script-eval-loader = { path = "../eval-loader", version = "0.1.7" }
 swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.7" }
 
+time-dilation = { path = "../time-dilation", version = "0.1.7", features = ["enable_summary"] }
+
+
 tracing = "0.1.40"
 regex = "1.11.1"
 tiny-ver = "0.1.2"
