--- a/crates/eval/Cargo.toml
+++ b/crates/eval/Cargo.toml
@@ -14,7 +14,7 @@ swamp-script-node = { path = "../node", version = "0.1.7" }
 fixed32 = "0.0.17"
 seq-map = "0.0.13"
 swamp-script-core-extra = { path = "../core-extra", version = "0.1.7" }
-swamp-script-source-map = { path = "../source-map", version = "0.1.7" }
+swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.7" }
 squirrel-prng = "0.0.1"
 
 [dev-dependencies]
