--- a/crates/vm-test/Cargo.toml
+++ b/crates/vm-test/Cargo.toml
@@ -16,6 +16,7 @@ swamp-script-types = { path = "../types", version = "0.1.7" }
 swamp-script-semantic = { path = "../semantic", version = "0.1.7" }
 swamp-vm-disasm = { path = "../vm-disasm", version = "0.1.7" }
 swamp-script-code-gen-program = { path = "../code-gen-program", version = "0.1.7" }
+swamp-script-source-map-lookup = { path = "../source-map-lookup", version = "0.1.7"}
 
 tracing = "0.1.40"
 seq-map = "0.0.13"
