--- a/crates/dep-loader/Cargo.toml
+++ b/crates/dep-loader/Cargo.toml
@@ -12,4 +12,6 @@ seq-map = "0.0.13"
 swamp-script-ast = { path = "../ast", version = "0.1.9" }
 swamp-script-parser = { path = "../parser", version = "0.1.9" }
 swamp-script-source-map = { path = "../source-map", version = "0.1.9" }
+time-dilation = { path = "../time-dilation", version = "0.1.9"}
+
 dirs = "6.0.0"
